objects/Job_application__c.object
<CustomObject>
    <label>Job application</label>
    <nameField>
        <label>Job application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Review Resume</fullName>
                </value>
                <value>
                    <fullName>Phone Screen</fullName>
                </value>
                <value>
                    <fullName>Schedule Interviews</fullName>
                </value>
                <value>
                    <fullName>Extend and offer</fullName>
                </value>
                <value>
                    <fullName>Hired</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Positions__c</fullName>
        <label>Positions</label>
        <referenceTo>Positions__c</referenceTo>
        <relationshipLabel>Job applications</relationshipLabel>
        <relationshipName>Job_applications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Candidates__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidates</label>
        <referenceTo>Candidates__c</referenceTo>
        <relationshipLabel>Job applications</relationshipLabel>
        <relationshipName>Job_applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cover_Letter__c</fullName>
        <label>Cover Letter</label>
        <length>30</length>
        <type>Text</type>
    </fields>
</CustomObject>